<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin1.blooddonation.DonateBlood"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="42dp"
            android:text="@string/age2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/age"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="#d0d3d4"
            android:enabled="true"
            android:focusable="false"
            android:inputType="number"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:textSize="24sp" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="11dp"
                android:text="@string/weight2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/wt"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="#d0d3d4"
                android:focusable="false"
                android:inputType="numberDecimal"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center">

            <TextView
                android:id="@+id/ttc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_are_eligible_to_donate"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_green_light"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:gravity="center">

            <CheckBox
                android:id="@+id/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:buttonTint="#000000"
                android:foregroundTint="#FFFFFF"
                android:onClick="Check"
                android:text="@string/declaration"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColorLink="#000000"
                android:textSize="18sp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center">

            <Button
                android:id="@+id/Donbutt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#c70039"
                android:enabled="false"
                android:onClick="Donate"
                android:text="@string/donate3"
                android:textSize="18sp" />

        </LinearLayout>

</LinearLayout>
