<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.admin1.blooddonation.Registration"
    android:gravity="center">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="90dp"
                android:text="@string/email_id"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#d0d3d4"
                android:enabled="true"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="75dp"
                android:text="@string/changehogayapass"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#d0d3d4"
                android:enabled="true"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="65dp"
                android:text="@string/confirm"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/confirm"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#d0d3d4"
                android:enabled="true"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="95dp"
                android:text="@string/contact"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/contact"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#d0d3d4"
                android:enabled="true"
                android:inputType="number"
                android:maxLines="1"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="22sp" />

        </LinearLayout>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="90dp"
                android:text="Address:"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:background="#d0d3d4"
                android:enabled="true"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="3"
                android:paddingBottom="8dp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:paddingTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="22sp"
                android:scrollbars="vertical" />

        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="115dp"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#d0d3d4"
                android:enabled="true"
                android:inputType="text"
                android:maxLines="1"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="235dp"
                android:text="@string/age"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/age"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="#d0d3d4"
                android:enabled="true"
                android:inputType="number"
                android:maxLines="1"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="152dp"
                android:text="@string/blood_group"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/bloodg"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="#d0d3d4"
                android:enabled="true"
                android:entries="@array/blood_arrays"
                android:prompt="@string/blood_prompt"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="125dp"
                android:text="@string/weight_in_kgs"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/wt"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="#d0d3d4"
                android:enabled="true"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="#c70039"
                android:onClick="Register"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="22sp" />

        </LinearLayout>


    </LinearLayout>
    </ScrollView>

</RelativeLayout>
